[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mqdm"
version = "2.0.2"
description = "cross-process progress bars"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bea Steers"}]
maintainers = [{name = "Bea Steers"}]
keywords = ["progress", "progress bars", "parallel", "concurrent", "futures", "multithreading", "multiprocessing", "pool", "cross-process"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/beasteers/mqdm"
Documentation = "https://beasteers.readthedocs.io/mqdm"
Issues = "https://github.com/beasteers/mqdm/issues"


[project.optional-dependencies]
test = ["pytest", "fire"]
dev = ["fire", "ipython", "pyinstrument", "pdbr"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["mqdm*"]
